--- a/browser/index.html
+++ b/browser/index.html
@@ -19,7 +19,7 @@
       <button>I WANT A BARKER</button>
     </div>
 
-    <div class="gallery">
+    <div class="app">
       <h4>welcome to derpy pets animal shelter!</h4>
     </div>
   </body>
