--- a/browser/index.html
+++ b/browser/index.html
@@ -9,18 +9,6 @@
   </head>
 
   <body>
-    <div class="header">
-      <img class="logo" src="/logo.png" alt="logo" />
-      <h3>derpy pets</h3>
-    </div>
-
-    <div class="filters">
-      <button>I WANT A MEOWER</button>
-      <button>I WANT A BARKER</button>
-    </div>
-
-    <div class="app">
-      <h4>welcome to derpy pets animal shelter!</h4>
-    </div>
+    <div id="root"></div>
   </body>
 </html>
