--- a/browser/index.html
+++ b/browser/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
   <head>
-    <title>derpy pets</title>
+    <title>adorable adoptables</title>
     <link rel="stylesheet" href="/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Arvo|Roboto:300" rel="stylesheet">
 
@@ -11,7 +11,7 @@
   <body>
     <div class="header">
       <img class="logo" src="/logo.png" alt="logo" />
-      <h3>derpy pets</h3>
+      <h3>adorable adoptables</h3>
     </div>
 
     <div class="filters">
@@ -20,7 +20,7 @@
     </div>
 
     <div class="app">
-      <h4>welcome to derpy pets animal shelter!</h4>
+      <h4>adorable animals, coming soon!</h4>
     </div>
   </body>
 </html>
